crates/analyzer/tests/snapshots/errors__mismatch_return_type.snap
---
source: crates/analyzer/tests/errors.rs
assertion_line: 281
expression: "error_string(&path, test_files::fixture(path))"
---
error: expected function to return `address` but was `u256`
  ┌─ compile_errors/mismatch_return_type.fe:3:9
  │
3 │         return u256(1)
  │         ^^^^^^^^^^^^^^


